# lib/api-spec/openapi.yaml
@@ -1967,6 +1967,9 @@ components:
         photographerName:
           type: string
           nullable: true
+        bio:
+          type: string
+          nullable: true
         images:
           type: array
           items:
@@ -1997,6 +2000,9 @@ components:
           type: integer
           nullable: true
         photographerName:
+          type: string
+          nullable: true
+        photographerBio:
           type: string
           nullable: true
         clubId:
